--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+/* SET ASSETS( 1.font(polices) - 2.color palette - 3.images(otimisation) */
 /* montserrat-200 - latin */
 @font-face {
     font-family: 'Montserrat';
@@ -85,7 +86,7 @@
   }
 
 
-  /* set general color */
+  /* set general color (ASSETS 2) */
   :root {
       --white: #fff;
       --font-color: #333333;
@@ -123,43 +124,126 @@ body {
     justify-content: space-between;
     padding: 10px 0;
     font-size: 1.4rem;
-    
+    position: relative;
+}
+@media screen and (min-width: 36em) {
+    .main-header .container {
+        display: flex;
+        justify-content: flex-s;
+    }
 }
 
-.main-nav .menu {
-    display: flex;
-    text-transform: uppercase;
-    font-weight: 600;
-}
 .logo img {
     padding-top: 0.3rem;
     width: 13rem;
     height: 3rem;
-}
-li.menu-item {
-    margin-left: 40px;
-    padding: 10px;
-
 }
 
 li.menu-item-main {
     background-color: var(--orange);
     color: var(--white);
 }
+li.menu-item  {
+    padding: 0.8rem;
+}
 a{
     text-decoration: none;
     color: currentColor;
 }
-.menu-item a{
-    padding: 10px;
-}
 
-.menu-item:hover {
+
+
+[hidden] {
+    display: none;
+}
+ul#list-menu{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    text-align: center;
+}
+.main-nav ul.menu {    
+    text-transform: uppercase;
+    font-weight: 600;
+}
+button#button-menu {
+    background-color: transparent;
+    font-weight: 500;
+    text-transform: uppercase;
+    border: none;
+    margin-right: 2rem;
+    padding: 1rem;
+}
+@media screen and (min-width: 36em) {
+    button#button-menu{
+        display: none;
+    }
+    ul#list-menu{
+        display: flex;
+        position: static;
+    }
+    .main-nav ul.menu {
+        
+        text-transform: uppercase;
+        font-weight: 600;
+        margin-top: 0.5rem;
+    }
+    .menu-item a{
+        padding: 10px;
+    }
+    li.menu-item {
+        padding: 1rem;
+        margin-left: 0.5rem;
+    
+    }   
+}
+.menu-item:hover, button#button-menu:hover{
     background-color: var(--orange);
     color: var(--white);
     transition: .2s;
     border-radius: 0.4rem;
 }
+/* button#button-menu{
+    background-color: transparent;
+    border: none;
+}
+.main-nav .menu {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    translate: -60% 0;
+    z-index: 10;
+}
+li.menu-item {
+    width: 100%;
+    margin: auto;
+}
+@media screen and (min-width: 36em){
+    button#button-menu {
+        display: none;
+    }
+    
+    .main-nav .menu {
+        display: flex;
+        text-transform: uppercase;
+        font-weight: 600;
+        right: 30%;
+        top: 10%;
+        
+    }
+    .menu-item a{
+        padding: 10px;
+    }
+    li.menu-item {
+        margin-left: 40px;
+        padding: 10px;
+    
+    }
+    
+} */
+
 /* landing section */
 .landing {
     min-height: 80rem;
@@ -202,6 +286,19 @@ p.landing-descrition{
     transform: rotate(180deg);
 
 }
+@media(max-width: 1200px){
+    .left{
+        right: 10rem;
+    }
+    .right {
+        left: 10rem;
+    }
+}
+@media (max-width: 950px ){
+    .left, .right {
+        opacity: 0;
+    }
+}
 #badge-landing .orange {
     margin: 0 0 0 6px;
 }
@@ -223,10 +320,18 @@ p.landing-descrition{
 .services
 ul.main-services {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat( 4, 1fr) ;
     max-width: 85rem;
     margin: 6rem auto 0 auto;
   
+}
+@media screen and (max-width: 48em){
+    .services ul.main-services {
+        display: grid;
+        grid-template-columns: repeat( 2, 1fr) ;
+        max-width: 85rem;
+        margin: 6rem auto 0 auto;
+    }
 }
 h2.services-title {
     font-family: "Raleway", sans-serif;
@@ -245,9 +350,7 @@ p.services-description {
     border-radius: 50%;
     margin: auto;
     display: grid;
-    place-items: center;
-   
-   
+    place-items: center;  
 }
 .services-item-images img.services-img{
     margin: 50px auto 5px auto;
@@ -266,7 +369,13 @@ p.services-description {
 .services-item-description{
     font-weight: 200;
     font-size: 1.6rem;
-    margin-bottom: 17rem;
+    margin-bottom: 7rem;
+}
+@media screen and (min-width: 48em){
+    .services-item-description{
+        margin-bottom: 14rem;
+
+    }
 }
 
 /* sepate section */
@@ -408,6 +517,7 @@ article p.posts-description {
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
+   
     
 }
 .orange, .black {
@@ -422,9 +532,35 @@ article p.posts-description {
     background-color:var(--font-color);
 }
 .list-funfact{
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    
 }
+@media screen and (min-width: 36em){
+    .list-funfact{
+        grid-template-columns: repeat(3, 1fr);
+        
+    }
+}
+@media screen and (min-width: 48em){
+    .list-funfact{
+        grid-template-columns: repeat(6, 1fr);
+        
+    }
+}
+.funfact-item {
+    flex: 30%;
+}
+@media (max-width: 48em) {
+    .funfact-item{
+        flex: 33%;
+    }
+  }
+/* @media (max-width: 576px) {
+    .list-funfact{
+      flex-direction: column;
+    }       
+} */
 .funfact-item h4.funfact-item-number{
     color: var(--orange);
     font-size: 4rem;
@@ -493,7 +629,7 @@ p.comment-item-description{
 .contact .container {
     max-width: 90rem;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 1fr;
     gap: 0.1rem;
 }
 .contact .container article{
@@ -503,7 +639,7 @@ article .title {
     color: var(--orange);
     text-transform: uppercase;
     font-size: 1.5rem;
-    text-align: left;
+    text-align: center;
     font-weight: 600;
     font-family: "Raleway", sans-serif;
     word-spacing: 0.015rem ;
@@ -516,10 +652,23 @@ article .title {
     line-height: 2;
     margin-left: 17px;
 }
-.item-contact {
+.item-contact p {
+    margin-left: 1.2rem;
+    line-height: 1.6;
+    font-size: 1.25rem;
+
+}
+div.item-contact {
     display: flex;
     justify-content: start;
-    margin-bottom: 2.1rem;
+    margin-bottom: 0.4rem;
+    max-width: 30rem;
+    margin: auto;
+    
+}
+.group-button {
+    max-width: 30rem;
+    margin: auto;
 }
 button.button-tag{
     background-color: var(--button-tags);
@@ -532,32 +681,96 @@ button.button-tag{
     line-height: 1;
     color: var(--medium-font-color)
 }
+.paragraph li {
+    text-align: center ;
+}
+
+@media screen and (min-width: 36em){
+    .contact .container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 0.1rem;
+    }
+    .contact .container article{
+        margin-left: 3.5rem;
+        margin-right: 3.5rem;
+    }
+    article .title {
+        text-align: center;
+    }
+    .paragraph li{
+        text-align: center ;
+    }
+    .group-button {
+        margin-left: 5rem;
+    }
+    .item-contact {
+        padding-left: 3rem;
+    }
+    
+}
+@media screen and (min-width: 48em){
+    .contact .container {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 0.1rem;
+    }
+    .contact .container article{
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
+    .group-button {
+        margin-left: 0rem;
+    }
+    .item-contact {
+        padding-left: 0rem;
+    }
+
+    
+}
 
 img.map-marker, img.map-marker-2 {
     width: 1.3rem;
     height: 1.625rem;
     margin-top: 0.5rem;
 }
-.item-contact p {
-    margin-left: 1.2rem;
-    line-height: 1.6;
-    font-size: 1.25rem;
 
-}
 
 hr{
-    width: 85rem;
+    width: 40rem;
     border: 0.1px solid #777777;
-    margin:  7.8rem auto 0 auto;
+    margin:  9rem auto 0 auto;
 }
-
 .container-footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 85rem;
+    max-width: 40rem;
     margin: 1.5rem auto 0 auto;
 }
+@media screen and (min-width:36em){
+    hr{
+        width: 50rem;
+    }
+    .container-footer {
+        max-width: 50rem;
+    }
+}
+@media screen and (min-width:48em){
+    hr{
+        width: 70rem;
+    }
+    .container-footer {
+        max-width: 70rem;
+    }
+}
+@media screen and (min-width:75em){
+    hr{
+        width: 110rem;
+    }
+    .container-footer {
+        max-width: 110rem;
+    }
+}
+
 .social-network{
     display: flex;
 }
@@ -570,4 +783,10 @@ hr{
     font-size: 1.5rem;
     line-height: 1.33;
 
+}
+@media screen and (max-width: 36em) {
+    html {
+        font-size: 8px;
+    }
+    
 }
